# vibewatch.github.io

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/aw/: actions-lock.json
.github/workflows/: build-hackernews-reports.yml  build-reddit-reports.yml  build-source-reports-reusable.yml  build-twitter-reports.yml  build-youtube-reports.yml  daily-repo-status.lock.yml  deploy-site.yml  extract.yml  gh-pages.yml  hackernews-reports.yml  reddit-reports.yml  reports.yml  test-copilot-cli.yml  test-newsletter.yml  translate-reports-to-chinese.md  translate-reports-to-chinese.yml  translate-reports.yml  twitter-reports.yml  youtube-reports.yml
cloudflare/: worker.js  wrangler.toml
docs/: .pages  index.md  index.zh.md
docs/hackernews/: .pages
docs/hackernews/ai/: 2026-04-07.md  2026-04-07.zh.md  2026-04-08.md  2026-04-08.zh.md  2026-04-09.md  2026-04-09.zh.md  2026-04-10.md  2026-04-10.zh.md  2026-04-11.md  2026-04-11.zh.md  2026-04-12.md  2026-04-12.zh.md  2026-04-13.md  2026-04-13.zh.md  2026-04-14.md  2026-04-14.zh.md  2026-04-15.md  2026-04-15.zh.md  2026-04-16.md  2026-04-16.zh.md  2026-04-17.md  2026-04-17.zh.md  2026-04-18.md  2026-04-18.zh.md  2026-04-19.md  2026-04-19.zh.md  2026-04-20.md  (+177 more)
docs/javascripts/: engagement-metrics.js  subscribe.js  twitter-metrics.js
docs/reddit/: .pages
docs/stylesheets/: extra.css
docs/twitter/: .pages
hooks/: nav_prune.py  pagefind_index.py  rss.py  title.py
overrides/: main.html
overrides/partials/: alternate.html  copyright.html  header.html  nav.html
scripts/: build_newsletter_digest.py
(+1339 files in other folders)
