[project]
name = "website"
version = "0.1.0"
description = "AI Pulse Daily"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-macros-plugin",
    "mkdocs-static-i18n[material]",
    "pagefind[extended]",
]

[tool.hatch.build.targets.wheel]
packages = []
